# jepa-spillover

./: .gitignore  LICENSE  Makefile  Project_basis.odt  README.md  environment.yml  pyproject.toml  requirements.txt
config/: config.yaml  secrets.yaml.example
dashboard/: app.py
docs/: MODEL_CARD.md  architecture.md  data_sources.md  roadmap.md
docs/flowcharts/: 01_pipeline_geral.md  02_jepa_genomica.md  03_dados_e_governanca.md
notebooks/: 01_exploracao.ipynb
presentations/: README.md  slides.md
results/kmer_sweep/: kmer_sweep_results.json
results/kmer_sweep_full/: kmer_sweep_results.json
results/validation/: known_pathogens_audit.csv  label_errors.csv  ranking_quality.json
scripts/: README.md  _utils.py  download_all.sh  download_gisaid.py  download_intact_virushost.py  download_ncbi_batch2.py  download_ncbi_virus.py  download_taxonomy.py  download_virhostnet.py  download_virushostdb.py  gen_carta_anuencia_docx.py  gen_checklist_docx.py  gen_projeto_orientador_docx.py  gen_projeto_orientador_preenchido.py  gen_subprojeto_docx.py  kmer_sweep.py  post_jepa.sh  push_to_github.sh  push_to_huggingface.sh  resume.sh  run_pipeline.sh  validate_biology.py
src/jepa_spillover/: __init__.py  cli.py  config.py  logger.py  security.py
src/jepa_spillover/data/: __init__.py  curate.py  kmers.py  synthetic.py
src/jepa_spillover/evaluation/: metrics.py  (+2 more)
submissao_pdj/: CHECKLIST.md  Carta_de_Anuencia_PDJ.docx  Checklist_Submissao_PDJ.docx  Projeto_Orientador_ESQUELETO.docx  Projeto_Orientador_PDJ.docx  Subprojeto_JEPA-Spillover_PDJ.docx
tests/: test_pipeline.py
(+11 files in other folders)
